# SimpleCoder

./: .gitignore  INSTALL.md  LICENSE  README.md  SETUP_GUIDE.md  agent.py  environment.yaml  main.py  pyproject.toml  remove.py  requirements.txt
docs/: ebpf_wsl2_setup.md
mcps/deno/: Dockerfile
tests/: conftest.py  test_agent_memory.py  test_code_indexer.py  test_code_search_tool.py  test_memory_tool.py  test_operation_rollback.py  test_rollback_tool.py  test_safe_code_edit.py  test_safe_run_command.py  test_sandbox_executor.py
tools/: advanced_file_read.py  agent_memory.py  code_edit.py  code_indexer.py  code_search_tool.py  file_read_tool.py  file_write.py  format_code.py  git_diff.py  lint_code.py  list_directory.py  memory_tool.py  operation_rollback.py  rollback_tool.py  run_command.py  run_unit_tests_tool.py  safe_code_edit.py  safe_run_command.py  sandbox_executor.py  search_files.py  tracer.py  web_search.py
