[project]
name = "claude-code-dupe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "grandalf>=0.8",
    "httpx==0.27.2",
    "langchain==0.3.7",
    "langchain-openai>=0.3.0",
    "langchain-community==0.3.7",
    "langchain-mcp-adapters>=0.1.11",
    "langgraph==0.2.45",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "mcp>=1.17.0",
    "openai>=1.50.0",
    "python-dotenv==1.0.1",
    "rich==13.9.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "pylint>=3.0.0",
]
